// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradientButton snapshots default rounded snapshot 1`] = `
<View
  colors={
    [
      "#0A2463",
      "#8B61C2",
    ]
  }
  end={
    {
      "x": 1,
      "y": 0,
    }
  }
  onMagicTap={[Function]}
  onTouchEnd={[Function]}
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "alignItems": "center",
      "borderRadius": 10,
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 10,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 14,
          },
          {
            "fontFamily": "Lexend-Regular",
          },
        ]
      }
    >
      Ok
    </Text>
  </View>
</View>
`;

exports[`GradientButton snapshots fullRounded snapshot 1`] = `
<View
  colors={
    [
      "#0A2463",
      "#8B61C2",
    ]
  }
  end={
    {
      "x": 1,
      "y": 0,
    }
  }
  onMagicTap={[Function]}
  onTouchEnd={[Function]}
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "alignItems": "center",
      "borderRadius": 30,
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 10,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 14,
          },
          {
            "fontFamily": "Lexend-Regular",
          },
        ]
      }
    >
      Round
    </Text>
  </View>
</View>
`;
